@@ -1,9 +1,9 @@
-# @(#)Ident: TracingStacks.pm 2013-05-07 17:28 pjf ;
+# @(#)Ident: TracingStacks.pm 2013-05-07 18:13 pjf ;
 
 package File::DataClass::Exception::TraitFor::TracingStacks;
 
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.19.%d', q$Rev: 4 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.19.%d', q$Rev: 5 $ =~ /\d+/gmx );
 
 use Moose::Role;
 use MooseX::Types   -declare => [ q(Tracer) ];
@@ -36,17 +36,20 @@ before 'BUILD' => sub {
 };
 
 # Public methods
+sub filtered_frames {
+   return grep { $_->subroutine !~ m{ :: __ANON__ \z }mx } $_[ 0 ]->frames;
+}
+
 sub stacktrace {
    my ($self, $skip) = @_; my (@lines, %seen, $subr);
 
-   for my $frame (reverse $self->frames) {
+   for my $frame (reverse $self->filtered_frames) {
       my $package = $frame->package; my $l_no;
 
       unless ($l_no = $seen{ $package } and $l_no == $frame->line) {
-         $seen{ $package } = $frame->line;
+         $seen{ $package } = $frame->line; my $symbol = $subr || $package;
 
-         my $symbol = $subr || $package; $self->subroutine_filter( $symbol )
-            and push @lines, join q( ), $symbol, 'line', $frame->line;
+         push @lines, join q( ), $symbol, 'line', $frame->line;
       }
 
       $subr = $frame->subroutine;
@@ -55,13 +58,6 @@ sub stacktrace {
    defined $skip or $skip = 0; pop @lines while ($skip--);
 
    return wantarray ? reverse @lines : (join "\n", reverse @lines)."\n";
-}
-
-sub subroutine_filter {
-   my ($self, $subr) = @_;
-
-   $subr =~ m{ :: __ANON__ \z }mx and return 0;
-   return 1;
 }
 
 sub trace_frame_filter { # Lifted from StackTrace::Auto
@@ -119,7 +115,7 @@ File::DataClass::Exception::TraitFor::TracingStacks - Provides a minimalist stac
 
 =head1 Version
 
-This documents version v0.19.$Rev: 4 $ of
+This documents version v0.19.$Rev: 5 $ of
 L<File::DataClass::Exception::TraitFor::TracingStacks>
 
 =head1 Description
@@ -156,20 +152,19 @@ the C<trace> attribute
 
 Default subroutine enable method modifiers
 
+=head2 filtered_frames
+
+   @frames = $self->filtered_frames;
+
+Currently frames with subroutine names matching C<__ANON__> are
+filtered out
+
 =head2 stacktrace
 
    $lines = $self->stacktrace( $num_lines_to_skip );
 
 Returns a minimalist stack trace. Defaults to skipping zero frames
 from the stack
-
-=head2 subroutine_filter
-
-   $bool = $self->subroutine_filter( $subroutine_name );
-
-Returns true if the frames subroutine name does not match against the
-list of subroutines to suppress. Currently subroutine names matching
-C<__ANON__> are filtered out
 
 =head2 trace_frame_filter
 
